--- a/style.css
+++ b/style.css
@@ -60,37 +60,150 @@
 	width:100%;
 	padding:0 15px;
 }
+.align-items-center{
+	align-items:center !important;
+}
+.align-items-flex-start{
+	align-items:flex-start !important;
+}
+.align-items-flex-end{
+	align-items:flex-end !important;
+}
+.align-items-baseline{
+	align-items:baseline !important;
+}
+.align-items-stretch{
+	align-items:stretch !important;
+}
+.btns{
+	display:inline-block;
+	text-decoration:none;
+	text-align:center;
+	padding:0px 10px;
+	color:#fff;
+	background-color:#e03a3c;
+	border-radius:5px;
+}
 
-
+body{
+	font-family: 'Poppins', sans-serif;
+}
 .logo{
-	background-color:red;
-	height:50px;
-	
+	background-color:#fff;
 }
-.navbar{
-	background-color:red;
-	height:50px;
-	
+.logo a span{
+	color:#e03a3c;
 }
+.logo a{
+	text-decoration:none;
+	font-size:25px;
+	font-weight:600;
+	color:#111;
+	display:inline-block;
+}	
+.navbar .menu-bar{
+	text-align:right;
+}
+.navbar .menu-bar > li{
+	display:inline-block;
+}
+.menu-bar li a{
+	display:block;
+	text-decoration:none;
+	color:#000;
+	padding-left:12px;
+	padding-right:12px;
+	padding-bottom:10px;
+	padding-top:10px;
+	transition:all 0.3s ease;
+}
+.menu-bar li a:hover{
+	color:#e03a3c;
+}
+.dropdown{
+	position:relative;
+}
+.dropdown-nav{
+	position:absolute;
+	top:100%;
+	left:0;
+	min-width:180px;
+	background-color:#fff;
+	box-shadow:1px 1px 6px #ccc;
+	border-radius:8px;
+	text-align:left;
+	opacity:0;
+	visibility:hidden;
+	transition:all 0.5s ease;
+}
+.dropdown:hover .dropdown-nav{
+	transform:translateY(0);
+	opacity:1;
+	visibility:visible;
+}
+.dropdown-nav li{
+	display:block;
+}
+.dropdown-nav li a{
+	color:#000;
+	display:block;
+	text-decoration:none;
+	padding-top:8px;
+	padding-bottom:8px;
+	padding-left:15px;
+	padding-right:15px;
+}
+.dropdown-nav-sub{
+	position:absolute;
+	top:25%;
+	left:100%;
+	min-width:180px;
+	background-color:#fff;
+	box-shadow:1px 1px 6px #ccc;
+	border-radius:8px;
+	text-align:left;
+	transform:translateX(-15px);
+	opacity:0;
+	visibility:hidden;
+	transition:all 0.5s ease;
+}
+.dropdown-sub:hover .dropdown-nav-sub{
+	transform:translateX(0);
+	opacity:1;
+	visibility:visible;
+}
+
 .header{
-	background-color:black;
-	padding:10px 0;
-}
-
-
-.banner-content{
-	background-color:red;
-	height:230px;
+	background-color:#fff;
+	padding-top:20px;
+	padding-bottom:20px;
 }
 .banner{
-	background-color:black;
+	background-image:url(hero-bg.jpg);
+	background-repeat:no-repeat;
+	background-size:cover;
+	width:100%;
 	height:500px;
-	padding:130px 0;
-	margin-top:20px;
-	
+    background-attachment:scroll;   
+}
+.banner-content{
+	padding-top:30px;
+}
+.banner-content ul li a{
+	text-decoration:none;
+}
+.banner-content h1{
+	padding-bottom:10px;
+	font-size:30px;
+	color:#fff;
+}
+.banner-content p{
+	padding-bottom:15px;
+	font-size:21px;
+	color:#fff;
 }
 .logos{
-	background-color:red;
+	background-color:gray;
 	height:50px;
 
 }
@@ -254,13 +367,13 @@
 
 }
 .logo{
-	background-color:red;
-	height:50px;
+	background-color:#fff;
+	
 	
 }
 .navbar{
-	background-color:red;
-	height:50px;
+	background-color:white;
+	
 	
 }
 .footer{
