--- a/style.css
+++ b/style.css
@@ -79,12 +79,35 @@
 	display:inline-block;
 	text-decoration:none;
 	text-align:center;
-	padding:0px 10px;
+	padding:8px 12px;
 	color:#fff;
 	background-color:#e03a3c;
 	border-radius:5px;
 }
+.btns1{
+	display:inline-block;
+	text-decoration:none;
+	text-align:center;
+	padding:10px 20px;
+	color:#fff;
+	background-color:#e03a3c;
+	border-radius:4px;
+	border: 2px solid #e03a3c;
+}
 
+.btns2{
+	display:inline-block;
+	text-decoration:none;
+	text-align:center;
+	padding:10px 35px;
+	color:#fff;
+	border-radius:40px;
+	border: 2px solid #e03a3c;
+	
+}
+.btns2:hover{
+	background-color:#e03a3c;
+}
 body{
 	font-family: 'Poppins', sans-serif;
 }
@@ -118,6 +141,10 @@ body{
 	transition:all 0.3s ease;
 }
 .menu-bar li a:hover{
+	color:#e03a3c;
+}
+
+.menu-bar a:hover{
 	color:#e03a3c;
 }
 .dropdown{
@@ -179,93 +206,244 @@ body{
 	padding-bottom:20px;
 }
 .banner{
-	background-image:url(hero-bg.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(hero-bg.jpg);
 	background-repeat:no-repeat;
 	background-size:cover;
+	background-position:center;
 	width:100%;
-	height:500px;
-    background-attachment:scroll;   
+	height:590px;
+      
 }
 .banner-content{
-	padding-top:30px;
+	padding-top:140px;
+	    font-family: "Raleway", sans-serif;
 }
 .banner-content ul li a{
 	text-decoration:none;
 }
 .banner-content h1{
 	padding-bottom:10px;
-	font-size:30px;
+	font-size:45px;
 	color:#fff;
 }
 .banner-content p{
 	padding-bottom:15px;
-	font-size:21px;
+	font-size:25px;
 	color:#fff;
 }
-.logos{
-	background-color:gray;
-	height:50px;
+.logos img{
+	padding:20px;
+}
 
+
+.logos{
+	height:75px;
+    padding:0px 12px;
+}
+.logos img{
+	width:100%;
+	filter:grayscale(1);
+	opacity:0.6;
+	transition:all 0.3s ease;
+	
+}
+.logos img:hover{
+	  filter:grayscale(0);
+	opacity:1;
 }
 .client{
 	background-color:white;
 	padding-top:50px;
-	padding-bottom:50px;
+	padding-bottom:90px;
 }
 .about{
-	background-color:green;
-	padding-top:60px;
-	padding-bottom:60px;
+	
+	padding-top:80px;
+	padding-bottom:80px;
+	position:relative;
+	z-index:1;
+}
+.about::after{
+	content:"";
+	position:absolute;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	background:#1b1b1b;
+	z-index:-1;
+	transform:skew(0deg ,-3deg);
+}
+.about1 h1{
+	padding-bottom:10px;
+	font-size:25px;
+	color:#fff;
+}
+.about1 p{
+	padding-bottom:10px;
+	font-size:17px;
+	color:#fff;
 }
 .about1{
-	background-color:red;
+	background-color:#1b1b1b;
 	height:300px;
+	padding-left:20px;
+	padding-top:40px;
 }
 .about2{
-	background-color:red;
+	background-color:#1b1b1b;
 	height:150px;
 	margin-bottom:30px;
 }
-
+.about2 i{
+	color:red;
+	font-size:30px;
+}
+.about2 h3 {
+	color:#fff;
+}
+.about2 p{
+	color:#fff;
+}
 .tab{
-	background-color:black;
-	padding-top:50px;
-	padding-bottom:50px;
+	background-color:#fff;
+	padding-top:90px;
+	padding-bottom:13px;
 	margin-top:20px;
 }
+.tab-content h1{
+	color:#1b1b1b;
+	
+}
+.tab-content p{
+	color:#1b1b1b;
+	
+}
+.tab-content i{
+	font-size:20px;
+	border-radius:50px;
+	box-shadow:1px 1px 6px lightgrey;
+	padding:10px;
+	color:red;
+}
 .tab-content{
-	background-color:red;
+	background-color:#fff;
+	box-shadow:1px 1px 6px #ccc;
+	border-radius:3px;
 	height:100px;
+	text-align:center;
+	
+}
+.tab-content1{
+	background-color:#fff;
+	box-shadow:1px 1px 6px #ccc;
+	border-radius:3px;
+	height:100px;
+	text-decoration:none;
+	font-size:20px;
+	padding-left:5px;
+}
+.tab-a{
+	text-decoration:none;
+	color:#1b1b1b;
+}
+.tab-content1 a:hover{
+	color:#e03a3c;
 }
 .content{
-	background-color:yellow;
-	padding-bottom:50px;
-	padding-top:5px;
+	background-color:#fff;
+	padding-bottom:10px;
+	padding-top:20px;
 
 }
 .text-content{
-	background-color:blue;
-	height:300px;
+	background-color:#fff;
+	height:400px;
 }
+.text-content h2{
+	font-size:25px;
+	color:#414649;
+	font-family:'Roboto',Medium500;
+	padding-bottom:10px;
+	
+}
+.text-content .p1{
+   color:#908e94;
+   padding-bottom:12px;
+}
+.text-content i{
+	color:#63e6be;
+	padding:10px;
+}
+.text-content .p2{
+	padding-top:12px;
+	color:#908e94;
+}
+.text-content ul{
+	color:#908e94;
+	
+}
+.text-content ul li{list-style-type:none}
+
+.picture{
+	
+	padding:0px 15px;
+}
+
 .picture-content{
-	background-color:green;
-	height:350px;
+
+	height:380px;
 }
+.picture-content img{
+	width:100%;
+}
+
 .service{
-	background-color:grey;
-	padding:30px 0;
-	margin-top:20px;
+	
+	padding-top:80px;
+	padding-bottom:80px;
+	margin-top:100px;
+	margin-bottom:100px;
+	position:relative;
+	z-index:1;
 }
-.service-text{
-	background-color:blue;
-	height:120px;
+.service::after{
+	content:"";
+	position:absolute;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	background-color:#1b1b1b;
+	z-index:-1;
+	transform:skew(0deg ,-3deg);
+}
+.service-text p{
+	color:#fff;
 	margin-bottom:10px;
+	text-align:center;
 }
 .service-box{
-	 background-color:red;
 	 height:100px;
 	 margin-bottom:20px;
 }
+.service-box i{
+	color:#e03a3c;
+	font-size:30px;
+}
+.service-box h3 ,p{
+	color:#fff;
+}
+/*
+.icon{
+	position:relative;
+	top:28px;
+}
+.icon-text{
+	position:relative;
+	left:35px;
+}
+*/
 .portfolio{
 	background-color:black;
 	padding-bottom:30px;
@@ -281,6 +459,15 @@ body{
 	background-color:red;
 	height:40px;
     margin-bottom:15px;
+}
+.portfolio-tab1{
+	  text-align:center;
+	  font-size:20px;
+	 border-bottom:5px solid #e03a3c;
+	 width:60px;
+	height:50px;
+    margin-bottom:15px;
+	color:#fff;
 }
 .portfolio-image{
 	background-color:red;
