--- a/style.css
+++ b/style.css
@@ -325,6 +325,8 @@ body{
 	box-shadow:1px 1px 6px lightgrey;
 	padding:10px;
 	color:red;
+	position:relative;
+	top:-25px;
 }
 .tab-content{
 	background-color:#fff;
@@ -343,6 +345,7 @@ body{
 	font-size:20px;
 	padding-left:5px;
 }
+.tab-content1 i{padding:6px;}
 .tab-a{
 	text-decoration:none;
 	color:#1b1b1b;
