--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ body{
 	padding-bottom:20px;
 }
 .banner{
-	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(hero-bg.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('images/hero-bg.jpg');
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-position:center;
