--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@
 	background-color:#e03a3c;
 	border-radius:4px;
 	border: 2px solid #e03a3c;
+	transition:all 0.3s ease;
+}
+.btns1:hover{
+	background-color:rgba(0,0,0,0.6);
 }
 
 .btns2{
@@ -107,6 +111,9 @@
 }
 .btns2:hover{
 	background-color:#e03a3c;
+}
+.btns2 i{
+	margin-left:10px;
 }
 body{
 	font-family: 'Poppins', sans-serif;
@@ -170,6 +177,16 @@ body{
 }
 .dropdown-nav li{
 	display:block;
+}
+.dropdown i{
+	margin-left:5px;
+}
+.dropdown-sub i{
+	margin-left:5px;
+}
+.btns:hover{
+	background-color:#000;
+
 }
 .dropdown-nav li a{
 	color:#000;
@@ -248,7 +265,7 @@ body{
 	
 }
 .logos img:hover{
-	  filter:grayscale(0);
+    filter:grayscale(0);
 	opacity:1;
 }
 .client{
@@ -303,13 +320,13 @@ body{
 	color:#fff;
 }
 .about2 p{
-	color:#fff;
+	color:#999;
 }
 .tab{
 	background-color:#fff;
 	padding-top:90px;
 	padding-bottom:13px;
-	margin-top:20px;
+	
 }
 .tab-content h1{
 	color:#1b1b1b;
@@ -322,30 +339,40 @@ body{
 .tab-content i{
 	font-size:20px;
 	border-radius:50px;
-	box-shadow:1px 1px 6px lightgrey;
+	box-shadow:1px 1px 20px #ccc;
 	padding:10px;
 	color:red;
-	position:relative;
-	top:-25px;
+	position:absolute;
+	top: -27px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .tab-content{
 	background-color:#fff;
-	box-shadow:1px 1px 6px #ccc;
+	box-shadow:1px 1px 25px #ccc;
 	border-radius:3px;
-	height:100px;
 	text-align:center;
-	
+	position: relative;
+    padding: 20px;
 }
+
 .tab-content1{
 	background-color:#fff;
 	box-shadow:1px 1px 6px #ccc;
 	border-radius:3px;
-	height:100px;
 	text-decoration:none;
 	font-size:20px;
-	padding-left:5px;
+	transition:all 0.2s ease;
+	padding: 10px;
+    position: relative;
+    padding-left: 50px;
 }
-.tab-content1 i{padding:6px;}
+.tab-content1 i{
+	padding: 6px;
+    position: absolute;
+    top: 12px;
+    left: 12px;
+	}
 .tab-a{
 	text-decoration:none;
 	color:#1b1b1b;
@@ -353,6 +380,11 @@ body{
 .tab-content1 a:hover{
 	color:#e03a3c;
 }
+.tab-content1:active{
+	background-color:#e03a3c;
+	color:#fff;
+}
+
 .content{
 	background-color:#fff;
 	padding-bottom:10px;
@@ -405,7 +437,7 @@ body{
 	
 	padding-top:80px;
 	padding-bottom:80px;
-	margin-top:100px;
+	margin-top:120px;
 	margin-bottom:100px;
 	position:relative;
 	z-index:1;
@@ -426,15 +458,35 @@ body{
 	margin-bottom:10px;
 	text-align:center;
 }
+.service-text{
+	padding-bottom:20px;
+	}
 .service-box{
-	 height:100px;
-	 margin-bottom:20px;
+	 margin-bottom: 20px;
+    border: 1px solid black;
+    background-color: black;
+    position: relative;
+    padding: 12px;
+    padding-left: 60px;
 }
 .service-box i{
-	color:#e03a3c;
-	font-size:30px;
+    color: #e03a3c;
+    font-size: 30px;
+    position: absolute;
+    left: 15px;
+    top: 20px;
 }
-.service-box h3 ,p{
+.border{
+	    border: 4px solid red;
+    /* width: 169px; */
+    position: absolute;
+    /* bottom: 19px; */
+    width: 61px;
+    /* right: 91px; */
+    left: 36%;
+    transform: translateY(36%);
+}
+.service-box h3,p{
 	color:#fff;
 }
 /*
@@ -446,43 +498,121 @@ body{
 	position:relative;
 	left:35px;
 }
+
+.icon{
+	position:absolute;
+	padding-top: 21px;
+    padding-left: 10px;
+}
+.icon-text{
+	position: relative;
+    padding-left: 60px;
+	padding-top: 12px;
+    padding-right: 19px;
+}
 */
+}
 .portfolio{
-	background-color:black;
+	background-color:#fff;
 	padding-bottom:30px;
 	padding-top:30px;
 	margin-top:20px;
 }
 .portfolio-text{
-	background-color:blue;
-	height:100px;
-	margin-bottom:10px;
+	
+	height:80px;
+	margin-bottom:5px;
+}
+.portfolio-text p{
+	color:#000;
+    text-align:center;
 }
 .portfolio-tab{
-	background-color:red;
+	color:#fff;
 	height:40px;
     margin-bottom:15px;
+	text-align:center;
+	position:relative;
+}
+.portfolio-tab .pt1{
+	padding-left:15px;
+}
+.pt1 a:hover{
+	color:#fff;
+	border:1px solid #e03a3c;
+	background-color:#e03a3c;
+	border-radius:4px;
+	padding:5px;
+}
+.portfolio-tab  a{
+	text-decoration:none;
+	color:#000;
+}
+.portfolio-tab ul li{
+		list-style-type:none;
+		display:inline-block;
+		
 }
 .portfolio-tab1{
 	  text-align:center;
 	  font-size:20px;
-	 border-bottom:5px solid #e03a3c;
-	 width:60px;
+      position:relative;
 	height:50px;
     margin-bottom:15px;
 	color:#fff;
 }
+.portfolio-tab1 h1{
+	color:#000;
+}
 .portfolio-image{
 	background-color:red;
-	height:240px;
-	margin-bottom:20px;
+	height:260px;
+	margin-bottom:30px;
+}
+.portfolio-image1{
+	    height: 295px;
+        box-shadow: 1px 1px 6px #999;
+        position: relative;
+        padding-top: 118px;
+        padding-left: 14px;
+		font-family: "Raleway", sans-serif;
+}
+.portfolio-image1 i{
+	          color:#fceaea;
+              font-size:20px;
+
+}
+.portfolio-image1 h4{color:#ccc;}
+.port-text{
+    position: absolute;
+    top: 36px;
+    right: 106px;
+}
+.portfolio-image1 p{
+	color:#1b1b1b;
+}
+.portfolio-image img{
+	width:100%;
+}
+.timage{
+	 height: 90px;
+    position: absolute;
+    top: 8%;
+    left: 4%;
+    width: 90px;
+    transform: translateX(10%);
+}
+.timage img{
+     width:100%;
 }
 .portfolio-menu{
 	padding-left:500px;
 }
+
 .price-tag{
 	background-color:red;
 	height:430px;
+	margin-bottom:20px;
 }
 .faq-client{
 	background-color:red;
