--- a/style.css
+++ b/style.css
@@ -337,13 +337,15 @@ body{
 	
 }
 .tab-content i{
-	font-size:20px;
-	border-radius:50px;
-	box-shadow:1px 1px 20px #ccc;
-	padding:10px;
-	color:red;
-	position:absolute;
-	top: -27px;
+	font-size: 20px;
+    border-radius: 50px;
+    box-shadow: 1px 1px 7px #1b1b1b;
+    padding: 10px;
+    color: red;
+    position: absolute;
+    top: -30px;
+    width: 40px;
+    line-height: 18px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -353,34 +355,33 @@ body{
 	border-radius:3px;
 	text-align:center;
 	position: relative;
-    padding: 20px;
+    padding: 18px 10px 26px 10px;
 }
-
+.tab-content1 p{color:#1b1b1b;}
 .tab-content1{
-	background-color:#fff;
-	box-shadow:1px 1px 6px #ccc;
-	border-radius:3px;
-	text-decoration:none;
-	font-size:20px;
-	transition:all 0.2s ease;
-	padding: 10px;
+	background-color: #fff;
+    font-size: 20px;
+    transition: all 0.2s ease;
+    padding: 25px 18px 12px 10px;
     position: relative;
     padding-left: 50px;
+	border:1px solid #1b1b1b;
 }
 .tab-content1 i{
-	padding: 6px;
-    position: absolute;
-    top: 12px;
-    left: 12px;
+	position: absolute;
+    top: 32%;
+    left: 4%;
+    transform: translateY(-4%);
+    line-height: 28px;
 	}
 .tab-a{
 	text-decoration:none;
 	color:#1b1b1b;
 }
-.tab-content1 a:hover{
+.tab-content1 :hover{
 	color:#e03a3c;
 }
-.tab-content1:active{
+ .tab-content1:active{
 	background-color:#e03a3c;
 	color:#fff;
 }
@@ -459,7 +460,10 @@ body{
 	text-align:center;
 }
 .service-text{
-	padding-bottom:20px;
+	padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+    position: relative;
 	}
 .service-box{
 	 margin-bottom: 20px;
@@ -477,14 +481,13 @@ body{
     top: 20px;
 }
 .border{
-	    border: 4px solid red;
-    /* width: 169px; */
-    position: absolute;
-    /* bottom: 19px; */
-    width: 61px;
-    /* right: 91px; */
-    left: 36%;
-    transform: translateY(36%);
+	   position: absolute;
+    width: 60px;
+    background-color: red;
+    height: 5px;
+    top: 26%;
+    right: 48%;
+    transform: translateX(12%);
 }
 .service-box h3,p{
 	color:#fff;
@@ -594,6 +597,9 @@ body{
 .portfolio-image img{
 	width:100%;
 }
+.portfolio{
+	margin-top:20px;
+}
 .timage{
 	 height: 90px;
     position: absolute;
@@ -613,7 +619,9 @@ body{
 	background-color:red;
 	height:430px;
 	margin-bottom:20px;
+	text-align:center;
 }
+
 .faq-client{
 	background-color:red;
 	padding-top:30px;
