--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ body{
     border: 1px solid black;
     background-color: black;
     position: relative;
-    padding: 12px;
+    padding: 15px 10px 17px 21px;
     padding-left: 60px;
 }
 .service-box i{
@@ -487,6 +487,15 @@ body{
     background-color: red;
     height: 5px;
     top: 26%;
+    right: 48%;
+    transform: translateX(12%);
+}
+.border1{
+	position: absolute;
+    width: 60px;
+    background-color: red;
+    height: 5px;
+    top: 60%;
     right: 48%;
     transform: translateX(12%);
 }
@@ -523,9 +532,10 @@ body{
 	margin-top:20px;
 }
 .portfolio-text{
-	
-	height:80px;
-	margin-bottom:5px;
+padding-bottom: 20px;
+    color: #1b1b1b;
+    text-align: center;
+    position: relative;
 }
 .portfolio-text p{
 	color:#000;
@@ -558,12 +568,10 @@ body{
 		
 }
 .portfolio-tab1{
-	  text-align:center;
-	  font-size:20px;
-      position:relative;
-	height:50px;
-    margin-bottom:15px;
-	color:#fff;
+	  padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+    position: relative;
 }
 .portfolio-tab1 h1{
 	color:#000;
