--- a/style.css
+++ b/style.css
@@ -839,6 +839,9 @@ padding-bottom: 20px;
 .extra{
 	border-bottom:1px solid black;
 }
+.price-tag span{
+	font-size:20px;
+}
 ./*fp1{
 	opacity: 0;
     height: 9px;
