--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
 	padding:0px;
 	box-sizing:border-box;
 }
-.container{
+/*.container{
 	width:1180px;
 	margin:0 auto;
 	
-}
+}*/
+.container{
+		width:100%;
+	}
 .row{
 	display:flex;
 	flex-wrap:wrap;
@@ -553,6 +556,12 @@ body{
     right: 48%;
     transform: translateX(12%);
 }
+.border2{position:absolute;
+         width:34px;
+		 background-color:red;
+		 height:3px;
+		 top:15%;
+    }
 .service-box h3,p{
 	color:#fff;
 }
@@ -1089,6 +1098,7 @@ padding-bottom:10px;}
 }
 .info{
 	background-color:#1b1b1b;
+	position:relative;
 }
 .info p{
 	font-size:13px;
@@ -1105,6 +1115,7 @@ padding-bottom:10px;}
 }
 .info1{
 	background-color:#1b1b1b;
+	position:relative;
 }
 .info1 h4{
 	color:#fff;
@@ -1124,6 +1135,7 @@ padding-bottom:10px;}
 .info1 p:hover{color:#fff;}
 .info3{
 	background-color:#1b1b1b;
+	position:relative;
 	height:170px;
 }
 .info3{font-family:"Raleway", sans-serif;}
