--- a/style.css
+++ b/style.css
@@ -892,6 +892,7 @@ font-size:28px;}
 .price-tag span{
 	font-size:20px;
 }
+.nav-list.active{color:#e03a3c;}
 ./*fp1{
 	opacity: 0;
     height: 9px;
