--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,9 @@
+
+/*mobile device....*/
 @media(max-width:576px){
 	
 	.d-xs-none{
-		display:none !important;
+		display:none;
 	}
 .row{margin:0;}	
 .row >*{width:100%;}
@@ -100,11 +102,144 @@
 .info{margin-bottom:20px;}
 .info1{margin-bottom:20px;}
 }
-
-
-@media (min-width:1200px){
+/*ipad mini...*/
+@media(min-width:768px)and(max-width:800px){
 	.container{
-	width:1180px;
+	width:767px;
+}
+	.d-xs-none{
+		display:none;
+	}
+.col-im-1{
+	width:8.33%;
+	padding:0 15px;
+}
+.col-im-2{
+	width:16.66%;
+	padding:0 15px;
+}
+.col-im-3{
+	width:25%;
+	padding:0 15px;
+}
+.col-im-4{
+	width:33.33%;
+	padding:0 15px;
+}
+.col-im-5{
+	width:41.66%;
+	padding:0 15px;
+}
+.col-im-6{
+	width:50%;
+	padding:0 15px;
+}
+.col-im-7{
+	width:58.33%;
+	padding:0 15px;
+}
+.col-im-8{
+	width:66.66%;
+	padding:0 15px;
+}
+.col-im-9{
+	width:75%;
+	padding:0 15px;
+}
+.col-im-10{
+	width:83.33%;
+	padding:0 15px;
+}
+.col-im-11{
+	width:91.66%;
+	padding:0 15px;
+}
+.col-im-12{
+	width:100%;
+	padding:0 15px;
+}
+.about1{text-align:center;}
+.about2{text-align:center;}
+.logos{height:100px;}
+.tab-content{margin-top:50px;}
+.tab-content1{margin-bottom:16px;}
+.tab-content1 p{display:none;}
+.portfolio-image1{margin-bottom:20px;}
+.tab-content1 i{
+	    top:32%;
+	    left: 40%;
+    transform: translateY(-16%);
+	font-size:24px;
+}
+.banner-content{text-align:center;}
+.banner-content h1{font-size:36px;}
+.banner-content p{font-size:20px;}
+.team-image{height:452px;}
+.name{    margin-right: 142px;}
+.name input{width:170%;}
+.mail input{width:184%;}
+.info1{margin-top:20px;}
+.info3{margin-top:25px;}
+}
+/*responsive...*/
+@media (min-width:992px){
+	.container{
+	width:990px;
+}
+
+.col-rs-1{
+	width:8.33%;
+	padding:0 15px;
+}
+.col-rs-2{
+	width:16.66%;
+	padding:0 15px;
+}
+.col-rs-3{
+	width:25%;
+	padding:0 15px;
+}
+.col-rs-4{
+	width:33.33%;
+	padding:0 15px;
+}
+.col-rs-5{
+	width:41.66%;
+	padding:0 15px;
+}
+.col-rs-6{
+	width:50%;
+	padding:0 15px;
+}
+.col-rs-7{
+	width:58.33%;
+	padding:0 15px;
+}
+.col-rs-8{
+	width:66.66%;
+	padding:0 15px;
+}
+.col-rs-9{
+	width:75%;
+	padding:0 15px;
+}
+.col-rs-10{
+	width:83.33%;
+	padding:0 15px;
+}
+.col-rs-11{
+	width:91.66%;
+	padding:0 15px;
+}
+.col-rs-12{
+	width:100%;
+	padding:0 15px;
+}
+}
+/*..Large device...*/
+@media(min-width:1200px){
+	.container{
+	width:1170px;
 	margin:0 auto;
 }
 
