--- a/responsive.css
+++ b/responsive.css
@@ -58,12 +58,37 @@
 
 .logo a{font-size:30px;}
 .tab-content{margin-bottom:40px;}
-.about1{margin-bottom:30px;}
-.banner-content{padding-top:16px;}
+.about1{margin-bottom:30px;
+       text-align:center;
+}
+.about1 h1{padding-bottom:20px;}
+.about1 p{padding-bottom:24px;
+           font-size:14px;
+}
+
+.about2{
+	    margin-top:30px;
+        margin-bottom:0px;
+		text-align:center;
+}
+.banner-content{padding-top:16px;
+           text-align:center;
+		   padding-top:62px;
+}
+.banner-content h1{font-size:30px;}
+.banner-content p{font-size:22px;}
 .tab-content1{
 	    line-height: 28px;
         margin-bottom: 18px;
 	}
+.portfolio-text-1 p{font-size:15px;}	
+.portfolio-text p{font-size:15px;}	
+.tab-content1 p{display:none;}	
+.tab-content1 i{
+	top:25%;
+	left:30%;
+	font-size:24px;
+}
 .tab{padding-top:66px;}	
 .text-content{margin-bottom:170px;}
 .service{margin-top:0px;}
@@ -90,20 +115,28 @@
     width: 60px;
     background-color: red;
 	right:44%;
-	top:114%;
+	top:60%;
 	transform: translateY(294%);
 	
 	}
+.team-link{
+	left: 22%;
+    bottom: 8%;
+    transform: translateY(-22%);
+}	
 .team{margin-top:10px;}	
-.team-image{margin-bottom:78px;}
+.team-image{margin-bottom:115px;}
 .name input{width:116%;}
 .mail input{width:97%;}
 .form{height:450px;}
 .info{margin-bottom:20px;}
 .info1{margin-bottom:20px;}
+.footer{height:118px;}
+.logoss{margin-bottom:20px;}
+.faq-quiz h1{font-size:18px;}
 }
 /*ipad mini...*/
-@media(min-width:768px)and(max-width:800px){
+@media(min-width:768px){
 	.container{
 	width:767px;
 }
@@ -235,6 +268,23 @@
 	width:100%;
 	padding:0 15px;
 }
+.banner-content{text-align:left;}
+.about1{text-align:left;}
+.about2{text-align:left;}
+.tab-content1 p{
+	display:block;
+	font-size:18px;
+}
+.tab-content1 i{left:4%;}
+.team-link{
+	  left:5%;
+	  bottom:55%;
+}
+.form{height:412px;}
+.info{margin-top:22px;}
+.name input{width:105%;}
+.mail input{width:111%;}
+.name{margin-right:10px;}
 }
 /*..Large device...*/
 @media(min-width:1200px){
@@ -291,4 +341,9 @@
 	width:100%;
 	padding:0 15px;
 }
+.banner-content{
+	 text-align:left;
+}
+.d-xs-none{
+	display:block;
 }
