--- a/style.css
+++ b/style.css
@@ -269,6 +269,9 @@ body{
 	background-color:#fff;
 	padding-top:20px;
 	padding-bottom:20px;
+	position:fixed;
+	width:100%;
+	z-index:2;
 }
 .banner{
 	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('images/hero-bg.jpg');
